<resources>
    <string name="app_name">Eight Hours</string>
    <string name="drag_to_add"></string>
    <string name="play_activity">Play</string>
    <string name="play_inactive">Can\'t play</string>
    <string name="timeleft">Time left</string>
    <string name="add_new_activity">Add activity</string>
    <string name="add_new_activity_inactive">Can\'t add</string>
    <string name="settings_name">Settings</string>
    <string name="drag_to_edit">Drag to edit</string>
    <string name="cancel">cancel</string>
    <string name="edit">edit</string>
    <string name="close">close</string>
    <string name="done_timer">Finished</string>
    <string name="confirm_activity">Confirm</string>
    <string name="today">TODAY</string>
    <string name="notification_ticker">Activity started</string>
    <string-array name="menu_buttons">
        <item>Circle</item>
        <item>List</item>
        <item>Timer</item>
        <item>Settings</item>
    </string-array>
    <string name="start">
        <u>start</u>
    </string>
    <string name="delete">
        <u>delete</u>
    </string>
    <string name="name_activity">Name the activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="activities_header">Activities</string>
    <string name="app_header">App</string>

    <!-- Activities Preferences -->
    <string name="default_time">Default time (in hours)</string>
    <string name="default_time_summary">In hours</string>
    <string name="multiple_at_once">Multiple playing</string>
    <string name="multiple_at_once_summary">Allow playing multiple activities at once</string>

    <!-- App Preferences -->
    <string name="lite_mode">Lite mode</string>
    <string name="lite_mode_summary">For slower devices</string>
    <string name="theme">Theme</string>

</resources>
